--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,9 +96,9 @@ endif(SHP_DROP_UNABLE_TO_OPEN_MSG)
 
 if(SHP_BUILD_STATIC)
   add_library(shp_s STATIC ${lib_SRC})
-else
+else(SHP_BUILD_STATIC)
   add_library(shp SHARED ${lib_SRC})
-endif
+endif(SHP_BUILD_STATIC)
 
 if(WIN32 AND NOT CYGWIN)
   set_target_properties(shp
